--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,35 @@
 body {
     margin: 0;
+    font-family: 'Avenir Next', Avenir, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    color: #515158;
+    background: #f0f0f0;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+a {
+    text-decoration: none;
+    color: #aaa;
+    outline: none;
+}
+
+a:hover,
+button:hover {
+    color: #515158;
+    outline: none;
+}
+
+a:focus,
+button:focus {
+    outline: none;
+}
+
+.hidden {
+    position: absolute;
+    overflow: hidden;
+    width: 0;
+    height: 0;
+    pointer-events: none;
 }
 
 .container {
@@ -36,6 +66,13 @@ body {
     transform-style: preserve-3d;
 }
 
+.building--selected {
+    -webkit-transform: translateZ(15vmin) rotate3d(0, 0, 1, 20deg);
+    /* go to center */
+    transform: translateZ(15vmin) rotate3d(0, 0, 1, 20deg);
+}
+
+
 .museum {
     width: 100%;
     height: 100%;
@@ -51,6 +88,28 @@ body {
     transition: opacity 1s cubic-bezier(0.7, 0, 0.3, 1) 0s, transform 1s 0s;
 }
 
-.level.level--open {
+.level.level--selected {
     transform: translateZ(15vmin) rotate3d(0, 0, 1, 20deg);
+}
+
+.navBar {
+    position: absolute;
+    top: 0;
+    right: 0;
+    text-align: center;
+    -webkit-transition: opacity 0.8s;
+    transition: opacity 0.8s;
+}
+
+.navBar--hidden {
+    pointer-events: none;
+    opacity: 0;
+}
+
+@media screen and (max-width: 65.625em),
+screen and (max-height: 40.625em) {
+    .main {
+        width: 100vw;
+    }
+}
 }
