--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font-family: 'Avenir Next', Avenir, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    color: #515158;
+    color: #515151;
     background: #f0f0f0;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -15,7 +15,7 @@ a {
 
 a:hover,
 button:hover {
-    color: #515158;
+    color: #515151;
     outline: none;
 }
 
@@ -38,7 +38,7 @@ button:focus {
     height: 100vh;
 }
 
-.headbar {
+.header {
     position: absolute;
     top: 0;
     left: 0;
@@ -68,9 +68,9 @@ button:focus {
 }
 
 .surroundings {
-    width: 192vmin;
+    width: 100vmin;
     height: 128vmin;
-    margin: -64vmin 0 0 -96vmin;
+    margin: -64vmin 0 0 -52vmin;
     transition: transform 0.3s;
     -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
@@ -81,9 +81,9 @@ button:focus {
 }
 
 .building {
-    width: 96vmin;
+    width: 50vmin;
     height: 64vmin;
-    margin: -32vmin 0 0 -48vmin;
+    margin: -28vmin 0 0 -15vmin;
     transition: transform 0.3s;
     -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
@@ -93,6 +93,7 @@ button:focus {
     position: relative;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 .level,
@@ -121,15 +122,27 @@ button:focus {
     transform-style: preserve-3d;
 }
 
+.btn__search {
+    position: absolute;
+    top: 1em;
+    right: 0;
+    z-index: 200;
+    border: none;
+    fill: #515151;
+
+}
+
+.btn__search--global {
+    padding: 2vmin 2vmin;
+}
+
 .navBar {
     position: absolute;
-    top: 0;
+    top: 14em;
     right: 0;
-    width: 2em;
-    height: 2em;
+    border: none;
     z-index: 101;
     text-align: center;
-    background-color: #cccccc;
     -webkit-transition: opacity 0.8s;
     transition: opacity 0.8s;
 }
@@ -137,10 +150,12 @@ button:focus {
 .nav__btn--all-levels {
     border: none;
     padding: 2vmin 2vmin;
+    background-color: #d7d7d7;
+    fill: white;
 }
 
 .nav__btn--all-levels:hover {
-    fill: white;
+    fill: #cccccc;
 }
 
 .navBar--hidden {
@@ -152,6 +167,10 @@ button:focus {
 screen and (max-height: 40.625em) {
     .main {
         width: 100vw;
+    }
+
+    .container {
+        overflow: hidden;
     }
 }
 }
